<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calculo.MainActivity">

    <EditText
        android:id="@+id/editTextNumberDecimalValor"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimalPercentual"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValor"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:gravity="bottom|right"
        android:text="@string/label_valor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPercentual"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="72dp"
        android:gravity="bottom|right"
        android:text="@string/label_percentual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="190dp"
        android:layout_height="76dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="172dp"
        android:text="@string/label_button_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="112dp"
        android:layout_height="75dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="172dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonDesconto"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/label_radio_desc" />

        <RadioButton
            android:id="@+id/radioButtonJuros"
            android:layout_width="match_parent"
            android:layout_height="38dp"

            android:text="@string/label_radio_juro" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>