<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity">

    <TextView
        android:id="@+id/textViewLabelPercentualInformado"
        android:layout_width="144dp"
        android:layout_height="47dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="72dp"
        android:gravity="bottom|right"
        android:text="@string/label_percentual_resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelOperacaoSelecionada"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="184dp"
        android:gravity="bottom|right"
        android:text="@string/label_operacao_selecionada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOperacaoSelecionada"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="184dp"
        android:gravity="bottom|left"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPercentualInformado"
        android:layout_width="96dp"
        android:layout_height="44dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="72dp"
        android:gravity="bottom|left"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelValorInformado"
        android:layout_width="144dp"
        android:layout_height="47dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="124dp"
        android:gravity="bottom|right"
        android:text="@string/label_valor_resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValorInformado"
        android:layout_width="138dp"
        android:layout_height="45dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="124dp"
        android:gravity="bottom|left"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelResultadoInformado"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="240dp"
        android:gravity="bottom|right"
        android:text="@string/label_resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewResultadoInformado"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="240dp"
        android:gravity="bottom|left"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="43dp"
        android:layout_height="44dp"
        android:layout_marginStart="296dp"
        android:layout_marginLeft="296dp"
        android:layout_marginTop="72dp"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="bottom|center"
        android:text="@string/label_percent_symbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>